使用 Colaboratory 创建

--- a/TensorFlow_02_Use_TensorBoard_With_Colab.ipynb
+++ b/TensorFlow_02_Use_TensorBoard_With_Colab.ipynb
@@ -64,19 +64,23 @@
       "source": [
         "#@title function helper\n",
         "#@markdown edit layer <br> outputs = inputs * Weights + biases\n",
-        "def add_layer(inputs, in_size, out_size, activation_function=None):\n",
+        "def add_layer(inputs, in_size, out_size, n_layer, activation_function=None):\n",
         "  # add one more layer and return the output of this layer    \n",
-        "  with tf.name_scope('layer'):\n",
+        "  layer_name = 'layer{}'.format(n_layer)\n",
+        "  with tf.name_scope(layer_name):\n",
         "    with tf.name_scope('weights'):\n",
         "      Weights = tf.Variable(tf.random_normal([in_size, out_size]), name='weights')\n",
+        "      tf.summary.histogram('{}/weights'.format(layer_name), Weights)\n",
         "    with tf.name_scope('biases'):\n",
         "      biases = tf.Variable(tf.zeros([1, out_size]) + 0.1, name='biases')\n",
+        "      tf.summary.histogram('{}/biases'.format(layer_name), biases)\n",
         "    with tf.name_scope('outpus_y'):\n",
         "      Wx_plus_b = tf.add(tf.matmul(inputs, Weights), biases)\n",
         "    if activation_function is None:\n",
         "      outputs = Wx_plus_b\n",
         "    else:\n",
-        "      outputs = activation_function(Wx_plus_b, )\n",
+        "      outputs = activation_function(Wx_plus_b)\n",
+        "    tf.summary.histogram('{}/outputs'.format(layer_name), outputs)\n",
         "    return outputs"
       ],
       "execution_count": 0,
@@ -109,9 +113,9 @@
       "source": [
         "#@title add hidden layer\n",
         "# add hidden layer\n",
-        "l1 = add_layer(xs, 1, 10, activation_function=tf.nn.relu)\n",
+        "l1 = add_layer(xs, 1, 10, n_layer = 1, activation_function=tf.nn.relu)\n",
         "# add output layer\n",
-        "prediction = add_layer(l1, 10, 1, activation_function=None)"
+        "prediction = add_layer(l1, 10, 1, n_layer = 2, activation_function=None)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -126,7 +130,8 @@
       "source": [
         "#@title loss function, the error between prediciton and real data\n",
         "with tf.name_scope('loss'):\n",
-        "  loss = tf.reduce_mean(tf.reduce_sum(tf.square(ys - prediction), 1))   "
+        "  loss = tf.reduce_mean(tf.reduce_sum(tf.square(ys - prediction), 1))   \n",
+        "  tf.summary.scalar('loss', loss)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -157,7 +162,10 @@
         "#@title run\n",
         "sess = tf.Session()\n",
         "\n",
+        "merged = tf.summary.merge_all()\n",
+        "\n",
         "writer = tf.summary.FileWriter(\"logs/\", sess.graph)\n",
+        "\n",
         "init = tf.global_variables_initializer()\n",
         "sess.run(init)"
       ],
@@ -166,9 +174,31 @@
     },
     {
       "metadata": {
+        "id": "spXtwFB0ULCx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "#@title train data simulator\n",
+        "x_data = np.linspace(-1, 1, 300, dtype=np.float32)[:, np.newaxis]\n",
+        "noise = np.random.normal(0, 0.05, x_data.shape).astype(np.float32)\n",
+        "y_data = np.square(x_data) - 0.5 + noise\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  sess.run(train_step, feed_dict={xs:x_data, ys:y_data})\n",
+        "  if i % 50 == 0:\n",
+        "    rs = sess.run(merged, feed_dict={xs:x_data, ys:y_data})\n",
+        "    writer.add_summary(rs, i)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "XaXgH7qrMuF5",
         "colab_type": "code",
-        "outputId": "bab53217-0a20-4998-992f-1b049e747e10",
+        "outputId": "c709a3c4-7020-4ec4-a0eb-040d57546ae5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
@@ -180,21 +210,21 @@
         "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
         "!unzip ngrok-stable-linux-amd64.zip\n"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2018-11-26 08:55:07--  https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
-            "Resolving bin.equinox.io (bin.equinox.io)... 54.152.127.232, 52.72.245.79, 52.72.145.109, ...\n",
-            "Connecting to bin.equinox.io (bin.equinox.io)|54.152.127.232|:443... connected.\n",
+            "--2018-11-30 06:35:54--  https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+            "Resolving bin.equinox.io (bin.equinox.io)... 35.173.6.94, 34.196.237.103, 35.173.3.255, ...\n",
+            "Connecting to bin.equinox.io (bin.equinox.io)|35.173.6.94|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 5363700 (5.1M) [application/octet-stream]\n",
             "Saving to: ‘ngrok-stable-linux-amd64.zip’\n",
             "\n",
-            "\r          ngrok-sta   0%[                    ]       0  --.-KB/s               \r         ngrok-stab   1%[                    ] 101.21K   417KB/s               \r        ngrok-stabl  14%[=>                  ] 762.55K  1.53MB/s               \r       ngrok-stable  98%[==================> ]   5.01M  6.89MB/s               \rngrok-stable-linux- 100%[===================>]   5.11M  7.03MB/s    in 0.7s    \n",
+            "ngrok-stable-linux- 100%[===================>]   5.11M  3.48MB/s    in 1.5s    \n",
             "\n",
-            "2018-11-26 08:55:08 (7.03 MB/s) - ‘ngrok-stable-linux-amd64.zip’ saved [5363700/5363700]\n",
+            "2018-11-30 06:35:57 (3.48 MB/s) - ‘ngrok-stable-linux-amd64.zip’ saved [5363700/5363700]\n",
             "\n",
             "Archive:  ngrok-stable-linux-amd64.zip\n",
             "  inflating: ngrok                   \n"
@@ -207,7 +237,7 @@
       "metadata": {
         "id": "R5j-tGROMxWX",
         "colab_type": "code",
-        "outputId": "7d40d323-8549-46d4-c04a-f10139d9800e",
+        "outputId": "91edcdef-7ad1-4da0-affe-b92b58ed18af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -226,12 +256,12 @@
         "!curl -s http://localhost:4040/api/tunnels | python3 -c \\\n",
         "    \"import sys, json; print(json.load(sys.stdin)['tunnels'][0]['public_url'])\""
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "http://1b6d980f.ngrok.io\n"
+            "https://065ce897.ngrok.io\n"
           ],
           "name": "stdout"
         }
