使用 Colaboratory 创建

--- a/PageRank_with_TensorFlow.ipynb
+++ b/PageRank_with_TensorFlow.ipynb
@@ -34,7 +34,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Introduce\n",
+        "# Introduction\n",
         "This is a project for learning TensorFlow at a deeper level and implementing an algorithm from a low level in order to better understanding.\n"
       ]
     },
